# ElRinconDelVicio

./: app.py  pyproject.toml
css/: style-login.css  style.css  styleAbout.css
database/: datos.db
html/: Login.html  index.html  juego.html  nosotros.html  registro.html
img/: FrancoRebProg.jfif  SantiagoProgramador.jfif
img/about_us/: FranGeierProgram.jfif
js/: script-prueba.js  script.js
static/css/: card.css  main.css  style-login.css  style.css  styleAbout.css  stylesheet.css
static/js/: card.js  compra.js  script.js
templates/: Login.html  LoginE.html  cjuegos.html  compra.html  comprado.html  index.html  juego.html  mjuegos.html  nosotros.html
